--- a/SudokuJavaFX 1.2/src/sudoku/view/sudoku.fxml
+++ b/SudokuJavaFX 1.2/src/sudoku/view/sudoku.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Text?>
 <?import sudoku.view.RectPos?>
 
-<AnchorPane maxHeight="450.0" maxWidth="400.0" minHeight="450.0" minWidth="400.0" prefHeight="450.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sudoku.view.sudokuController">
+<AnchorPane maxHeight="450.0" maxWidth="400.0" minHeight="450.0" minWidth="400.0" prefHeight="450.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sudoku.view.SudokuController">
    <children>
       <GridPane alignment="CENTER" focusTraversable="true" gridLinesVisible="true" layoutX="5.0" layoutY="14.0" prefHeight="600.0" prefWidth="570.0" AnchorPane.bottomAnchor="46.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="14.0">
         <columnConstraints>
