--- a/SudokuJavaFX 1.2/src/sudoku/view/InputNumberPopup.fxml
+++ b/SudokuJavaFX 1.2/src/sudoku/view/InputNumberPopup.fxml
@@ -2,24 +2,28 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="0.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sudoku.view.InputNumberPopupController">
-   <children>
-      <Label text="vorgegebene Zahlen">
-         <tooltip>
-            <Tooltip text="Bitte geben Sie die Anzahl der vorgegebenen Zahlen im Sudokufeld ein." />
-         </tooltip>
-      </Label>
-      <TextField fx:id="eingabe" layoutX="-25.0" layoutY="21.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="21.0" />
-      <ButtonBar layoutX="372.0" layoutY="537.0" prefHeight="31.0" prefWidth="247.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
-         <buttons>
-            <Button mnemonicParsing="false" onAction="#handleAbsenden" text="Absenden" />
-            <Button mnemonicParsing="false" onAction="#handleAbbrechen" text="Abbrechen" />
-         </buttons>
-      </ButtonBar>
-   </children>
+<AnchorPane prefHeight="107.0" prefWidth="282.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sudoku.view.InputNumberPopupController">
+	<children>
+		<Label layoutX="14.0" layoutY="14.0" text="Enter preffered number of hints">
+			<tooltip>
+				<Tooltip text="Bitte geben Sie die Anzahl der vorgegebenen Zahlen im Sudokufeld ein." />
+			</tooltip>
+		</Label>
+		<ButtonBar layoutX="31.0" layoutY="75.0" prefHeight="31.0" prefWidth="247.0" AnchorPane.bottomAnchor="1.0" AnchorPane.rightAnchor="4.0">
+			<buttons>
+				<Button mnemonicParsing="false" onAction="#handleAbsenden" text="OK" />
+				<Button mnemonicParsing="false" onAction="#handleAbbrechen" text="Cancle" />
+			</buttons>
+		</ButtonBar>
+		<ComboBox fx:id="eingabecb" layoutX="70.0" layoutY="43.0" prefWidth="150.0">
+			
+			
+		</ComboBox>
+
+	</children>
 </AnchorPane>
