--- a/SudokuJavaFX 1.2/src/sudoku/view/InputNumberPopup.fxml
+++ b/SudokuJavaFX 1.2/src/sudoku/view/InputNumberPopup.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane prefHeight="107.0" prefWidth="282.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sudoku.view.InputNumberPopupController">
 	<children>
-		<Label layoutX="14.0" layoutY="14.0" text="Enter preffered number of hints">
+		<Label layoutX="14.0" layoutY="14.0" text="Enter preferred number of hints">
 			<tooltip>
 				<Tooltip text="Bitte geben Sie die Anzahl der vorgegebenen Zahlen im Sudokufeld ein." />
 			</tooltip>
