--- a/SudokuJavaFX 1.2/src/sudoku/view/sudoku.fxml
+++ b/SudokuJavaFX 1.2/src/sudoku/view/sudoku.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -461,8 +462,9 @@
       </GridPane>
       <ButtonBar layoutX="338.0" layoutY="595.0" prefHeight="30.0" prefWidth="248.0" AnchorPane.bottomAnchor="7.0" AnchorPane.rightAnchor="5.0">
         <buttons>
-          <Button defaultButton="true" mnemonicParsing="false" onAction="#handleSolve" text="Solve" />
-            <Button mnemonicParsing="false" onAction="#handleReset" text="Reset" />
+          <Button mnemonicParsing="false" onAction="#handleCheck" text="Check"> <tooltip> <Tooltip text="Checks if the Sudoku is uniquely solvable"  /> </tooltip> </Button>
+          <Button defaultButton="true" mnemonicParsing="false" onAction="#handleSolve" text="Solve" ><tooltip> <Tooltip text="Solves the Sudoku"  /> </tooltip> </Button>
+            <Button mnemonicParsing="false" onAction="#handleReset" text="Reset" ><tooltip> <Tooltip text="Resets the Sudoku (show empty Suodku)"  /> </tooltip> </Button>
         </buttons>
       </ButtonBar>
       <Line endX="395.0" endY="14.0" startX="5.0" startY="14.0" strokeWidth="2.0" AnchorPane.bottomAnchor="434.5" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="12.5" />
