--- a/SudokuJavaFX 1.2/src/sudoku/view/Congratulation.fxml
+++ b/SudokuJavaFX 1.2/src/sudoku/view/Congratulation.fxml
@@ -14,7 +14,7 @@
             <Image url="@../../../resources/images/congratulation.png" />
          </image>
       </ImageView>
-      <Button layoutX="109.0" layoutY="211.0" mnemonicParsing="false" onAction="#handleOk" text="OK" AnchorPane.topAnchor="211.0" />
+      <Button fx:id="ok" layoutX="109.0" layoutY="211.0" mnemonicParsing="false" onAction="#handleOk" text="OK" AnchorPane.topAnchor="211.0" />
       <Text layoutX="110.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1">
          <font>
             <Font size="56.0" />
