Über den Wrapper kann jetzt vom Benutzer bewusst die aktuell eingegebenen Zahlen gesperrt werden und zu jeder Zeit alle Zahlen frei gegeben werden.

--- a/SudokuJavaFX 1.2/src/sudoku/view/Wrapper.fxml
+++ b/SudokuJavaFX 1.2/src/sudoku/view/Wrapper.fxml
@@ -26,6 +26,12 @@
               <MenuItem id="about" mnemonicParsing="false" onAction="#handleAbout" text="About" />
             </items>
           </Menu>
+          <Menu id="Input" mnemonicParsing="false" text="Input">
+              <items>
+              <MenuItem mnemonicParsing="false" onAction="#handleResetEditability" text="Reset editability" /> 
+                  <MenuItem id="save" mnemonicParsing="false" onAction="#handleLockEntered" text="Lock and color entered numbers" />
+              </items>
+            </Menu>
         </menus>
       </MenuBar>
    </top>
