Methode colorInputBlue gelöscht, da überflüssig. Man kann jetzt als Nutzer alle nicht gelockten Felder reseten.

--- a/SudokuJavaFX 1.2/src/sudoku/view/Wrapper.fxml
+++ b/SudokuJavaFX 1.2/src/sudoku/view/Wrapper.fxml
@@ -30,6 +30,7 @@
               <items>
               <MenuItem mnemonicParsing="false" onAction="#handleResetEditability" text="Reset editability" /> 
                   <MenuItem id="save" mnemonicParsing="false" onAction="#handleLockEntered" text="Lock and color entered numbers" />
+                  	<MenuItem  mnemonicParsing="false" onAction="#handleResetNotLocked" text="Reset all not locked fields" />
               </items>
             </Menu>
         </menus>
