--- a/SudokuJavaFX 1.2/src/sudoku/view/InputNumberPopup.fxml
+++ b/SudokuJavaFX 1.2/src/sudoku/view/InputNumberPopup.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane prefHeight="107.0" prefWidth="282.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sudoku.view.InputNumberPopupController">
 	<children>
-		<Label layoutX="14.0" layoutY="14.0" text="Enter preferred number of hints">
+		<Label layoutX="14.0" layoutY="14.0" text="Enter preferred number of hints.">
 			<tooltip>
 				<Tooltip text="Bitte geben Sie die Anzahl der vorgegebenen Zahlen im Sudokufeld ein." />
 			</tooltip>
@@ -17,7 +17,7 @@
 		<ButtonBar layoutX="31.0" layoutY="75.0" prefHeight="31.0" prefWidth="247.0" AnchorPane.bottomAnchor="1.0" AnchorPane.rightAnchor="4.0">
 			<buttons>
 				<Button mnemonicParsing="false" onAction="#handleAbsenden" text="OK" />
-				<Button mnemonicParsing="false" onAction="#handleAbbrechen" text="Cancle" />
+				<Button mnemonicParsing="false" onAction="#handleAbbrechen" text="Cancel" />
 			</buttons>
 		</ButtonBar>
 		<ComboBox fx:id="eingabecb" layoutX="70.0" layoutY="43.0" prefWidth="150.0">
