--- a/SudokuJavaFX 1.2/src/sudoku/view/WrapperLock.fxml
+++ b/SudokuJavaFX 1.2/src/sudoku/view/WrapperLock.fxml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="150.0" maxWidth="150.0" minHeight="150.0" minWidth="150.0" prefHeight="150.0" prefWidth="150.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
 
+<AnchorPane maxHeight="150.0" maxWidth="150.0" minHeight="150.0" minWidth="150.0" prefHeight="150.0" prefWidth="150.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <ImageView fitHeight="165.0" fitWidth="165.0" layoutX="-9.0" layoutY="-6.0">
+         <image>
+            <Image url="@../../../resources/images/LoadingCircle.gif" />
+         </image>
+      </ImageView>
+   </children>
 </AnchorPane>
